--- a/b3_17220/index.html
+++ b/b3_17220/index.html
@@ -5,21 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>b2_17220</title>
-    <link rel="stylesheet" type="textstyle" href="../public/css.css" />
+    <link rel="stylesheet" type="text/css" href="public/css.css">
+    <style>
+
+    </style>
 </head>
 
 <body>
-    <h1 style="text-align: center; font-family: 'Courier New', Courier, monospace;"> Buổi học thứ 3 - ngày 17/2/2020</h1><br>
+
+    <h1 id="bong" style="text-align: center; font-family: 'Courier New', Courier, monospace;"> Buổi học thứ 3 - ngày 17/2/2020</h1><br>
     <div>
-        <table border="0px">
+        <table border="0px" style="font-size: large;">
             <tr>
                 <td rowspan="5">
-                    <img src="../bee.PNG" alt="con ong" width="110px">
+                    <img src="public/images/bee.PNG" alt="con ong" width="110px">
                 </td>
             </tr>
             <tr>
                 <td>
-                    Họ tên:<b style="color:darkgreen;"> Nguyễn Tiến Huấn</b>
+                    Họ tên:<b style=" color: darkgreen;"> Nguyễn Tiến Huấn</b>
                 </td>
             </tr>
             <tr>
@@ -41,10 +45,12 @@
 
     </div>
 
+
+
+
+
+
     <hr>
-
-
-
     <a href="https://google.com"> gggg </a>
 
 
