bai dau tien_22_2_2020

--- a/b3_17220/index.html
+++ b/b3_17220/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>b2_17220</title>
-    <link rel="stylesheet" type="text/css" href="public/css.css">
+    <link rel="stylesheet" type="text/css" href="./public/css.css">
     <style>
 
     </style>
@@ -13,12 +13,19 @@
 
 <body>
 
+
+    <!-- dhshd -->
     <h1 id="bong" style="text-align: center; font-family: 'Courier New', Courier, monospace;"> Buổi học thứ 3 - ngày 17/2/2020</h1><br>
     <div>
+        <hr>
+        <a href="#xyz">đến xyz</a>
+
+        <hr>
+
         <table border="0px" style="font-size: large;">
             <tr>
                 <td rowspan="5">
-                    <img src="public/images/bee.PNG" alt="con ong" width="110px">
+                    <img src="./public/images/bee.PNG" alt="con ong" width="110px">
                 </td>
             </tr>
             <tr>
@@ -44,6 +51,70 @@
         </table>
 
     </div>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <mark id="xyz">XYZ</mark>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
+    <p>ACB</p>
 
 
 
@@ -51,6 +122,12 @@
 
 
     <hr>
+
+    <p>Tên:</p><input type="text" title="tên của bạn" style="width: 20%; ">
+    <p>Mail:</p><input type="email" title="Mail của bạn" style="width: 20%;">
+    <p>Ý kiến của bạn:</p><input type="text" title="Ý kiến của bạn" style="width: 20%; height: 100px;"><br>
+    <button onclick=" alert('Cảm ơn bạn đã gửi phản hồi')" style="margin-top: 10px;">Gửi ý kiến</button>
+
     <a href="https://google.com"> gggg </a>
 
 
