--- a/bt_html_css/index.html
+++ b/bt_html_css/index.html
@@ -9,19 +9,19 @@
 
 <body style="background-color: #DEF0FA;">
     <ul type="square">
-        <li><a href="../bt1/index.html" target="showframe">Bài 01 - Các tag cơ bản</a></li>
-        <li><a href="../bt2/index.html" target="showframe">Bài 01 - Các tag cơ bản, có cố định</a></li>
-        <li><a href="../bt3/index.html" target="showframe">Bài 03 - Định dạng trang web</a></li>
-        <li><a href="../bt4/index.html" target="showframe">Bài 04 - Định dạng trang web (tt)</a></li>
-        <li><a href="../bt5/index.html" target="showframe">Bài 05 - Định dạng văn bản</a></li>
-        <li><a href="../bt6/index.html" target="showframe">Bài 06 - Định dạng văn bản(tt)</a></li>
-        <li><a href="../bt7/index.html" target="showframe">Bài 07 - Hình ảnh, liên kết, danh sách và ký tự đặc biệt</a></li>
-        <li><a href="../bt8/index.html" target="showframe">Bài 08 - Tạo bảng</a></li>
-        <li><a href="../bt9/index.html" target="showframe">Bài 09 - Tạo bảng có trộn dòng và cột</a></li>
-        <li><a href="../bt10/index.html" target="showframe">Bài 10 - Tạo bảng có trộn dòng và cột(tt)</a></li>
-        <li><a href="../bt11/index.html" target="showframe">Bài 11 - Tạo form và các điều khiển</a></li>
-        <li><a href="../bt12/index.html" target="showframe">Bài 12 - Tạo form và các điều khiển(tt)</a></li>
-        <li><a href="../bt13/index.html" target="showframe">Bài 13 - Tạo form và các điều khiển(tt)</a></li>
+        <li><a href="./bt1/index.html" target="showframe">Bài 01 - Các tag cơ bản</a></li>
+        <li><a href="./bt2/index.html" target="showframe">Bài 01 - Các tag cơ bản, có cố định</a></li>
+        <li><a href="./bt3/index.html" target="showframe">Bài 03 - Định dạng trang web</a></li>
+        <li><a href="./bt4/index.html" target="showframe">Bài 04 - Định dạng trang web (tt)</a></li>
+        <li><a href="./bt5/index.html" target="showframe">Bài 05 - Định dạng văn bản</a></li>
+        <li><a href="./bt6/index.html" target="showframe">Bài 06 - Định dạng văn bản(tt)</a></li>
+        <li><a href="./bt7/index.html" target="showframe">Bài 07 - Hình ảnh, liên kết, danh sách và ký tự đặc biệt</a></li>
+        <li><a href="./bt8/index.html" target="showframe">Bài 08 - Tạo bảng</a></li>
+        <li><a href="./bt9/index.html" target="showframe">Bài 09 - Tạo bảng có trộn dòng và cột</a></li>
+        <li><a href="./bt10/index.html" target="showframe">Bài 10 - Tạo bảng có trộn dòng và cột(tt)</a></li>
+        <li><a href="./bt11/index.html" target="showframe">Bài 11 - Tạo form và các điều khiển</a></li>
+        <li><a href="./bt12/index.html" target="showframe">Bài 12 - Tạo form và các điều khiển(tt)</a></li>
+        <li><a href="./bt13/index.html" target="showframe">Bài 13 - Tạo form và các điều khiển(tt)</a></li>
     </ul>
 
     </ol>
