update bt html css

--- a/bt_html_css/index.html
+++ b/bt_html_css/index.html
@@ -22,6 +22,9 @@
         <li><a href="./bt11/index.html" target="showframe">Bài 11 - Tạo form và các điều khiển</a></li>
         <li><a href="./bt12/index.html" target="showframe">Bài 12 - Tạo form và các điều khiển(tt)</a></li>
         <li><a href="./bt13/index.html" target="showframe">Bài 13 - Tạo form và các điều khiển(tt)</a></li>
+		<li><a href="./bt14/trangchu.html" target="showframe">Bài 14 -  Tạo frame </a></li>
+		<li><a href="./bt15/index.html" target="showframe">Bài 15 - Tạo iframe </a></li>
+		<li><a href="./bt16/index.html" target="showframe">Bài 16 -  Bài tập tổng hợp </a></li>
     </ul>
 
     </ol>
