--- a/bt_html_css/bt12/index.html
+++ b/bt_html_css/bt12/index.html
@@ -29,7 +29,7 @@
             <tr>
                 <td>Phái</td>
                 <td>
-                    <input type="radio" name="gt" value="Nam">
+                    <input type="radio" name="gt" value="Nam" id="Nam">
                     <label for="Nam">Nam</label>
                     <input type="radio" name="gt" value="Nu">
                     <label for="Nu">Nu</label>
