--- a/bt_html_css/bt16/index.html
+++ b/bt_html_css/bt16/index.html
@@ -62,13 +62,13 @@
         </tr>
         <tr>
             <td style=" clear: left;">
-                <p style="color: blue; ">Làm sao để bỏ thuốc lá</p>
-                <ul type="none" style="margin: 0px; padding: 0px;">
-                    <li>
-                        <img src="trau.jpg " alt="anh " style="width: 120px; float: left; "> Cơ thể chúng ta cần nhiều chất dinh dưỡng từ nhiều nguồn lương thực khác nhau. Vì vậy chúng ta lên thay đổi các loại thực phẩm khác nhau. Chúng ta không cần kiêng
-                        chi cả - quan trọng là chú ý đến số lượng...
+                <p style="color: blue; margin: 5px; ">Làm sao để bỏ thuốc lá</p>
+                <div style="display: flex; padding: 5px;">
+                    <img src="trau.jpg " alt="anh " style="width: 120px; float: left; ">
+                    <p style="margin-top: 0px;">Cơ thể chúng ta cần nhiều chất dinh dưỡng từ nhiều nguồn lương thực khác nhau. Vì vậy chúng ta lên thay đổi các loại thực phẩm khác nhau. Chúng ta không cần kiêng chi cả - quan trọng là chú ý đến số lượng...</p>
                     </li>
-                </ul>
+                    </ul>
+                </div>
                 <a href="#ty" style="float: right;">Về đầu trang</a>
             </td>
         </tr>
