--- a/Javascrip-course/bt_js/bt2/index.html
+++ b/Javascrip-course/bt_js/bt2/index.html
@@ -26,7 +26,8 @@
         }
 
         function btn_onClick() {
-            alert("Welcome to javascrip")
+            let txt = document.getElementsByName("msg")[0].value
+            alert(txt)
         }
         myFunction()
     </script>
